tests/snapshots/run_wpt_conformance__coreml_reciprocal_float32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reciprocal.https.any.js",
    "reciprocal float32 2D tensor",
    "coreml",
    "PASS",
)
